@@ -1,3 +1,11 @@
+2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* configure.ac: Revert the AM_ZLIB change.
+	* Makefile.in: Regenerated.
+	* aclocal.m4: Likewise.
+	* configure: Likewise.
+	* doc/Makefile.in: Likewise.
+
 2015-03-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/18169
